<resources>
    <string name="app_name">Uana</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="foto_do_produto">Foto do Produto</string>
    <string name="descreva_o_produto">Descreva o Produto</string>
    <string name="estoque">Estoque</string>
    <string name="nome_do_produto">Nome do Produto</string>
    <string name="downloadimage">downloadimage</string>
    <string name="cadastro_de_produto">Cadastro de Produto</string>
    <string name="insira_o_link_da_imagem_do_produto">Insira o link da imagem do produto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="atualizar">Atualizar</string>
    <string name="deletar">Deletar</string>
    <string name="preco">Preço</string>
    <string name="_00_00">00,00</string>
    <string name="unid">unid</string>
    <string name="valor">R$</string>
    <string name="link_da_imagem_do_produto">link da imagem do produto</string>
    <string name="nome">Nome:</string>
    <string name="categoria">Categoria:</string>
    <string name="categoria2">Categoria:</string>
    <string name="estoquetext">Estoque:</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="e_mail">E-mail</string>
    <string name="finalizar_cadastro">Finalizar Cadastro</string>
    <string name="aceitar_termos_de_uso_e_privacidade">Aceitar Termos de Uso e Privacidade</string>
    <string name="torne_se_um_colaborador">Torne-se um colaborador!</string>
    <string name="cpf">CPF</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="cep">CEP</string>
    <string name="cidade_estado">Cidade/Estado</string>
    <string name="bairro">Bairro</string>
    <string name="endere_o">Endereço</string>
    <string name="complemento">Complemento</string>
</resources>